Got add/remove of buttons working on config screen.
Next need to add configure dialogs per button.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -73,5 +73,6 @@
     <string name="button.configure">Configure</string>
     <string name="button.done">Done</string>
     <string name="button.button">Button</string>
+    <string name="button.remove">Remove</string>
     <string name="configure_title">Configure Daisy On/Off</string>
 </resources>
